Implemented component interaction functionality and resolved bug #21540 and #21569

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
@@ -1,5 +1,5 @@
 ﻿<div class="test-create-steps test-questions">
-  <create-test-header></create-test-header>
+  <create-test-header [testSettings]="testSettings"></create-test-header>
   <div class="container">
     <h5>Select questions for each section</h5>
     <md2-accordion class="questions-selection">
