--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
@@ -1,5 +1,5 @@
 ﻿<div class="test-create-steps test-sections">
-    <create-test-header></create-test-header>
+    <create-test-header [testSettings]="testSettings"></create-test-header>
     <div class="container">
         <h5>Select sections to add in your test</h5>
         <ul class="sections-list">
