--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-single-multiple-answer/questions-single-multiple-answer.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-single-multiple-answer/questions-single-multiple-answer.html
@@ -14,7 +14,7 @@
                     </div>
                 </div>
                 <div class="form-group answer-choices" *ngIf="isSingleAnswerQuestion">
-                    <md-radio-group [(ngModel)]="value" name="first" *ngFor="let option of singleMultipleAnswerQuestion.singleMultipleAnswerQuestion.singleMultipleAnswerQuestionOption;let i = index" [attr.data-index]="i" required (ngModelChange)="isRadioButtonSelected=true">
+                    <md-radio-group [(ngModel)]="optionNoSelected" name="first" *ngFor="let option of singleMultipleAnswerQuestion.singleMultipleAnswerQuestion.singleMultipleAnswerQuestionOption;let i = index" [attr.data-index]="i" required (ngModelChange)="isRadioButtonSelected=true">
                         <md-radio-button value="{{i}}" [disabled]="choice.pristine && !isEditQuestion">
                             <input type="text" class="form-control" placeholder="Answer Choice {{i+1}}" id="choice" #choice="ngModel" [(ngModel)]="option.option" [ngModelOptions]="{standalone: true}" required />
                             <em class="material-icons" (click)="removeOption(i)" *ngIf="!isClose">close</em>
@@ -45,7 +45,7 @@
                         </select>
                     </div>
                     <div class="form-group col-md-2 col-sm-2 pl0">
-                        <select name="difficulty" class="form-control" [(ngModel)]="difficultyLevelSelected" [ngModelOptions]="{standalone:true}" #difficulty="ngModel" >
+                        <select name="difficulty" class="form-control" [(ngModel)]="difficultyLevelSelected" [ngModelOptions]="{standalone:true}" #difficulty="ngModel">
                             <option [disabled]="difficulty.dirty || isEditQuestion" value="default">Select Difficulty</option>
                             <option *ngFor="let level of difficultyLevel">{{level}}</option>
                         </select>
