Made design improvements related to fonts and spacing for whole application.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/profile-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/profile-dashboard.html
@@ -1,6 +1,6 @@
 ﻿<div class="container">
     <div class="userprofile">
-        <div class="title-area">
+        <div class="title-area mb20">
             <h1>Profile <a href="#" [routerLink]="['edit']"><em class="material-icons">mode_edit</em></a></h1>
         </div>
         <div class="fields-box">
