--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/app.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/app.html
@@ -9,13 +9,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand h1" href="#"><img src="/images/logo.png" alt="Logo" /></a>
+        <a class="navbar-brand" href="#"><img src="/images/logo.png" alt="Logo" height="18" /></a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav">
-          <li [routerLinkActive]="['active']"><a href="#" class="h2" [routerLink]="['tests']">Tests</a></li>
-          <li [routerLinkActive]="['active']"><a href="#" class="h2" [routerLink]="['questions']">Questions</a></li>
+          <li [routerLinkActive]="['active']"><a href="#" class="h5" [routerLink]="['tests']">Tests</a></li>
+          <li [routerLinkActive]="['active']"><a href="#" class="h5" [routerLink]="['questions']">Questions</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><em class="material-icons">help</em></li>
