--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-edit/profile-edit.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-edit/profile-edit.html
@@ -1,6 +1,6 @@
 ﻿<div class="container">
     <div class="userprofile">
-        <div class="title-area">
+        <div class="title-area mb20">
             <h1>Profile</h1>
         </div>
         <div class="fields-box">
