--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -1,10 +1,10 @@
 ﻿<div class="container">
     <div class="questions-dashboard">
-        <div class="title-area clearfix">
+        <div class="title-area mb20 clearfix">
             <h1 class="pull-left">Questions</h1>
             <div class="search-area pull-right">
-                <input [(ngModel)]="matchString" (keyup)="getQuestionsMatchingSearchCriteria(matchString)" [hidden]="!showSearchInput" />
-                <button type="button" (click)="showSearchInput = !showSearchInput"><em class="material-icons">search</em></button>
+                <input type="text" placeholder="Search questions" [(ngModel)]="matchString" (keyup)="getQuestionsMatchingSearchCriteria(matchString)" [hidden]="!showSearchInput" (blur)="showSearchInput = false" />
+                <button type="button" (click)="showSearchInput = true"><em class="material-icons">search</em></button>
             </div>
         </div>
         <div class="main-block">
