--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/setup/setup.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/setup/setup.html
@@ -68,11 +68,13 @@
                             <div class="errors-container"></div>
                         </div>
                         <div class="action-buttons">
-                            <span class="general-error-msg pull-left" *ngIf="stepTwoErrorMessage">Invalid Email Settings</span>
+                            <div class="pull-left proceed-link">
+                                <span class="general-error-msg" *ngIf="stepTwoErrorMessage">Invalid Email Settings</span>
+                                <p *ngIf="stepTwoErrorMessage">To proceed further without Email Settings, please <a (click)="proccedFurtherWithoutEmailSettings(setup)">Click Here</a></p>
+                            </div>
                             <button type="button" class="btn" (click)="previousStep1(setup)">Previous</button>
                             <button type="button" class="btn btn-primary" [disabled]="!EmailSettingsForm.form.valid" (click)="validateEmailSettings(setup)">Next</button>
                         </div>
-                        <p class="proceed-link" *ngIf="stepTwoErrorMessage">To proceed further without Email Settings, please <a (click)="proccedFurtherWithoutEmailSettings(setup)">Click Here</a></p>
                     </form>
                 </wizard-step>
                 <wizard-step [title]="3">
@@ -113,7 +115,7 @@
                             </div>
                         </div>
                         <div class="action-buttons">
-                            <span class="general-error-msg long-msg pull-left" *ngIf="stepThreeErrorMessage">{{exceptionMessage}}</span>
+                            <span class="general-error-msg pull-left" *ngIf="stepThreeErrorMessage">{{exceptionMessage}}</span>
                             <button type="button" class="btn" (click)="previousStep2(setup)">Previous</button>
                             <button type="button" class="btn btn-primary" [disabled]="!CreateUserForm.form.valid" (click)="createUser(setup)">Finish</button>
                         </div>
