Changed class name from trappist-grid to data-grid.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
@@ -26,7 +26,7 @@
             <a class="pull-right back-link mt10" [routerLink]="['/tests']">< back</a>
         </div>
         <div class="grid-container">
-            <table class="trappist-grid" [md2Data]="reportData" #report="md2DataTable" [rowsPerPage]="10">
+            <table class="data-grid" [md2Data]="reportData" #report="md2DataTable" [rowsPerPage]="10">
                 <thead>
                     <tr>
                         <th><md-checkbox class="only-checkbox"></md-checkbox></th>
