--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/individual-report/individual-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/individual-report/individual-report.html
@@ -133,7 +133,7 @@
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="grid-container">
-                        <table class="trappist-grid">
+                        <table class="data-grid">
                             <thead>
                                 <tr>
                                     <th class="h5">Name</th>
