--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
@@ -3,65 +3,12 @@
     <div class="container">
         <h5>Select sections to add in your test</h5>
         <ul class="sections-list">
-            <li>
-                <label for="section1">
-                    <input type="checkbox" id="section1" />
+            <li *ngFor="let categories of testDetailsObj.category"
+                (click)="onSelect(categoryies)">
+                <label for="{{categoryies.categoryName}}">
+                    <input type="checkbox" id="" [(ngModel)]="category1.isSelect" />
                     <span class="section-box clearfix">
-                        <span class="h4 pull-left">English Communication</span>
-                        <em class="material-icons pull-right">check</em>
-                    </span>
-                </label>
-            </li>
-            <li>
-                <label for="section2">
-                    <input type="checkbox" id="section2" />
-                    <span class="section-box clearfix">
-                        <span class="h4 pull-left">Logical Reasoning & Data Interpretation</span>
-                        <em class="material-icons pull-right">check</em>
-                    </span>
-                </label>
-            </li>
-            <li>
-                <label for="section3">
-                    <input type="checkbox" id="section3" />
-                    <span class="section-box clearfix">
-                        <span class="h4 pull-left">Quantitative Ability</span>
-                        <em class="material-icons pull-right">check</em>
-                    </span>
-                </label>
-            </li>
-            <li>
-                <label for="section4">
-                    <input type="checkbox" id="section4" />
-                    <span class="section-box clearfix">
-                        <span class="h4 pull-left">Programming</span>
-                        <em class="material-icons pull-right">check</em>
-                    </span>
-                </label>
-            </li>
-            <li>
-                <label for="section5">
-                    <input type="checkbox" id="section5" />
-                    <span class="section-box clearfix">
-                        <span class="h4 pull-left">English Writing</span>
-                        <em class="material-icons pull-right">check</em>
-                    </span>
-                </label>
-            </li>
-            <li>
-                <label for="section6">
-                    <input type="checkbox" id="section6" />
-                    <span class="section-box clearfix">
-                        <span class="h4 pull-left">General Awareness</span>
-                        <em class="material-icons pull-right">check</em>
-                    </span>
-                </label>
-            </li>
-            <li>
-                <label for="section7">
-                    <input type="checkbox" id="section7" />
-                    <span class="section-box clearfix">
-                        <span class="h4 pull-left">Physics</span>
+                        <span class="h4 pull-left">{{categoryies.categoryName}}</span>
                         <em class="material-icons pull-right">check</em>
                     </span>
                 </label>
