--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -15,7 +15,7 @@
           <label class="h4">Start Date & Time</label>
           <input type="datetime-local" class="form-control small-width" [(ngModel)]="testSettings.startDate" name="Start Date" (mouseup)="isStartDateValid()" />
           <div class="errors-container">
-            <span class="error-msg" *ngIf="validStartDate">Start Date must be lesser than End Date and Time and greater than current Date and Time</span>
+            <span class="error-msg small-width" *ngIf="validStartDate">Start Date must be lesser than End Date and Time and greater than current Date and Time</span>
           </div>
         </div>
         <div class="form-group inline-field">
