--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-header/create-test-header.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-header/create-test-header.html
@@ -1,14 +1,14 @@
 ﻿<div class="test-create-header clearfix">
   <div class="container">
     <h1 class="pull-left">
-      <span class="test-name" [hidden]="editName">{{testSettings.testName}}</span>
+      <span class="test-name" [hidden]="!isLabelVisible">{{testSettings.testName}}</span>
       <input type="text" id="name" #box name="name" class="form-control" placeholder="Ex. Software Developer Recruitment Test" (keyup)="changeErrorMessage()"
              [(ngModel)]="testSettings.testName" #name="ngModel" required pattern="^[a-zA-Z0-9_@ $#%&_*^{}[\]\|.?-]*$" maxlength="150"
-             [hidden]="!editName" (focus)="selectAllContent($event)" (mouseup)="$event.preventDefault()" />
-      <button type="button" class="icon-btn ml10" (click)="editName = !editName; hideEditButton()" *ngIf="isEditButtonVisible"><em class="material-icons">edit</em></button>
+             [hidden]="isLabelVisible" (focus)="selectAllContent($event)" (mouseup)="$event.preventDefault()" />
+      <button type="button" class="icon-btn ml10" (click)="hideEditButton()" *ngIf="isEditButtonVisible"><em class="material-icons">edit</em></button>
       <span class="update-btns">
         <button type="button" class="icon-btn ml10" (click)="updateTestName(testSettings.id,testSettings)" *ngIf="!isEditButtonVisible" [disabled]="name.invalid || isTestNameExist"><em class="material-icons theme-text">check</em></button>
-        <button type="button" class="icon-btn ml10" (click)="editName = !editName;showEditButton(box.value)" *ngIf="!isEditButtonVisible"><em class="material-icons danger-text">close</em></button>
+        <button type="button" class="icon-btn ml10" (click)="showEditButton(box.value)" *ngIf="!isEditButtonVisible"><em class="material-icons danger-text">close</em></button>
       </span>
       <span class="errors-container">
         <span class="error-msg" *ngIf="name.errors && !name.valid && name.errors.required">Name is required</span>
