changes for component interaction, automapper and methods

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/deselect-category.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/deselect-category.html
@@ -7,7 +7,7 @@
         <h4 class="mb20">Questions are selected for the test from this category. Deselecting category will exclude those questions too from the test. Are you sure you want to continue?</h4>
     </md-dialog-content>
     <md-dialog-actions>
-        <button type="button" class="btn" (click)="No()" md-dialog-close>No</button>
+        <button type="button" class="btn" md-dialog-close>No</button>
         <button type="submit" class="btn btn-primary" (click)="Yes()">Yes</button>
     </md-dialog-actions>
 </div>
