--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
@@ -4,16 +4,17 @@
         <h5>Select sections to add in your test</h5>
         <ul class="sections-list">
             <li *ngFor="let categories of testDetailsObj.category"
-                (click)="onSelect(categoryies)">
-                <label for="{{categoryies.categoryName}}">
-                    <input type="checkbox" id="" [(ngModel)]="category1.isSelect" />
+                (click)="onSelect(categories)">
+                <label for="{{categories.categoryName}}">
+                    <input type="checkbox" id="" [(ngModel)]="categories.isSelect" />
                     <span class="section-box clearfix">
-                        <span class="h4 pull-left">{{categoryies.categoryName}}</span>
+                        <span class="h4 pull-left">{{categories.categoryName}}</span>
                         <em class="material-icons pull-right">check</em>
                     </span>
                 </label>
             </li>
         </ul>
     </div>
-    <create-test-footer></create-test-footer>
+    <create-test-footer (SaveAndExit)="SaveAndExit()" (SaveAndNext)="SaveAndNext()"></create-test-footer>
+    <deselect-category (SelectedCategoryId)="CategorySelected()"></deselect-category>
 </div>
